============ Version 0.1.0

2008-09-05  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* README: Updated the documentation ready for release.
	* src/compiler.c: Removed an unused variable.

2008-09-04  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui: Fixed some UI padding niggles.
	* data/ocr-assembly.lang:
	* src/compiler.c:
	* src/compiler.h:
	* src/instructions.h: Added support for a $SET preprocessor directive
	to allow memory locations to be set to specific values, which is
	useful for the readtable built-in subroutine.

2008-08-31  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/interface.c:
	* src/main.c:
	* src/main.h:
	* src/simulation.c:
	* src/simulation.h: Upgrade the stack to be dynamic, and ensure the
	entire microcontroller state is stored in each stack frame, rather than
	just a return address.

2008-08-30  Philip Withnall  <philip@tecnocode.co.uk>

	* src/compiler.c: Fix constant addressing for jump instructions.

2008-08-26  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/input-port.c:
	* src/main-window.c: Fix some problems with the input devices connected
	to the input port.

2008-08-17  Philip Withnall  <philip@tecnocode.co.uk>

	* src/compiler.c:
	* src/instructions.h: Renamed the "END" instruction "HALT".
	* data/mcus.ui:
	* src/Makefile.am:
	* src/analogue-input.c:
	* src/analogue-input.h:
	* src/input-port.c:
	* src/input-port.h:
	* src/interface.c:
	* src/interface.h:
	* src/main-window.c:
	* src/main.h:
	* src/simulation.c: Lots of refactoring of the simulation code as
	regards the interface. Added more input and output devices, and hooked
	them all up. Refactored error dialogues to use API more correctly.

2008-06-15  Philip Withnall  <philip@tecnocode.co.uk>

	* src/compiler.c:
	* src/instructions.h: Added context-sensitive help to error messages
	about operands of the wrong type.
	* data/mcus.ui:
	* src/Makefile.am:
	* src/interface.c:
	* src/simulation.c:
	* src/widgets/led.c: